# agent-forge-hackathon

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  ReadMe.md  check_env.py  main.py  requirements.txt
agents/: __init__.py  member_agent.py
api/: server.py
backend/: .env.example  .gitignore  README.md  conflict.py  context_store.py  main.py  pyproject.toml  router.py  sandbox.py  scraper.py
backend/app/: __init__.py  brightdata.py  kimi.py  main.py  model_router.py  models.py  session_runner.py  settings.py  store.py  tokenrouter.py
backend/tests/: test_api.py  test_brightdata.py  test_kimi.py  test_redis_store.py  test_settings.py  test_tokenrouter.py
conflict_checker/: __init__.py  checker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  auth.js  styles.css  ws.js
integrations/: bright_data.py  daytona.py  kimi_ai.py  nosana.py  sense_nova.py
shared_context/: __init__.py  action_log.py  broadcaster.py  lock_map.py  store.py
token_router/: __init__.py  router.py
