[project]
name = "ai-workspace-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for a collaborative AI workspace"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.26.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
